--- a/map.htm
+++ b/map.htm
@@ -13,6 +13,7 @@
     <title>Public Art Catalogue | Bath and North East Somerset Council</title>
     <link href="bower_components/ekko-lightbox/dist/ekko-lightbox.css" rel="stylesheet" />
     <link href="bower_components/leaflet/dist/leaflet.css" rel="stylesheet" />
+    <link href="bower_components/drmonty-leaflet-awesome-markers/css/leaflet.awesome-markers.css" rel="stylesheet" />
     <link href="css/bootstrap.min.css" rel="stylesheet" />
     <link href="css/site.css" rel="stylesheet">
 </head>
@@ -48,69 +49,22 @@
             <li><a href="http://www.bathnes.gov.uk">Home</a></li>
             <li><a href="http://www.bathnes.gov.uk/services/sport-leisure-and-parks/arts-development">Arts Development</a></li>
             <li><a href="http://www.bathnes.gov.uk/services/sport-leisure-and-parks/arts-development/public-art-bath-and-north-east-somerset">Public Art in Bath and North East Somerset</a></li>
-            <li class="active">Public Art Catalogue</li>
+            <li>Public Art Catalogue</li>
+            <li class="active">Map View</li>
         </ul>
         <h1>Public Art Catalogue</h1>
         <p>Welcome to the catalogue of Public Art in the Bath and North East Somerset area. These cover every art form from sculpture to mosaic, painting to photography, church art to murals made after 1945. Having enjoyed the information and photos presented here we hope you will be inspired to see the pieces in-situ.  For more information about his project please contact the Arts Development team at <a href="mailto:arts@bathnes.gov.uk">arts@bathnes.gov.uk</a></p>
         <p class="small">Data curated by Bath and North East Somerset Council and powered by <a href="https://data.bathhacked.org/Heritage/Public-Art-Catalogue/uau9-ufy3" alt="Public art catalogue on the Bath Hacked datastore">Bath: Hacked</a></p>
-
         <div class="well">
             <ul class="nav nav-tabs">
-                <li class="active"><a href="/">Gallery View</a></li>
-                <li><a href="/map.htm">Map View</a></li>
+                <li><a href="/">Gallery View</a></li>
+                <li class="active"><a href="/map">Map View</a></li>
             </ul>
         </div>
-
-        <form class="form-horizontal">
-            <fieldset>
-                <legend>Filter and search gallery</legend>
-                <div class="form-group">
-                    <label class="col-lg-2 control-label" for="txtSearch">Search</label>
-                    <div class="col-lg-10">
-                        <input class="form-control filter__search js-shuffle-search" id="txtSearch" type="text" placeholder="Search">
-                        <span class="help-block">As you enter text the gallery will filter based on matches on title and artist name.</span>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="col-lg-2 control-label" for="txtSearch">Category</label>
-                    <div class="col-lg-10">
-                        <ul id="btnsCategory" class="nav nav-pills"></ul>
-                        <span class="help-block">Select one category at a time to display items of that type. An item may appear in more than one category.</span>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="col-lg-2 control-label" for="txtSearch">Artist</label>
-                    <div class="col-lg-10">
-                        <select class="form-control" id="selArtists">
-                            <option value="">Select an artist</option>
-                        </select>
-                        <span class="help-block">Choose an artist to see all works by that artist.</span>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="col-lg-2 control-label" for="select">Order items</label>
-                    <div class="col-lg-10">
-                        <select class="sort-options form-control">
-                            <option value=""></option>
-                            <option value="title">Title</option>
-                            <option value="date">Date</option>
-                        </select>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-lg-2"></div>
-                    <div class="col-lg-10">
-                        <button id="btnReset" class="btn btn-link btn-reset pull-right">Reset Filters</button>
-                    </div>
-                </div>
-            </fieldset>
-        </form>
     </div>
     <br />
     <div class="container">
-        <h4 id="hdrGalleryTitle">Displaying all items</h4>
-        <hr />
-        <div id="grid" class="row shuffle--container shuffle--fluid"></div>
+        <div id="map"></div>
     </div>
     <div class="container">
         <footer>
@@ -188,18 +142,18 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button id="btnModalImages" type="button" class="btn btn-link btn-images">Images</button>
-                    <button type="button" class="btn btn-link" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                 </div>
             </div>
         </div>
     </div>
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="bower_components/shufflejs/dist/shuffle.min.js"></script>
+    <script src="bower_components/leaflet/dist/leaflet.js"></script>
     <script src="bower_components/ekko-lightbox/dist/ekko-lightbox.min.js"></script>
+    <script src="bower_components/drmonty-leaflet-awesome-markers/js/leaflet.awesome-markers.min.js"></script>
     <script src="scripts/publicart.js" type="text/javascript"></script>
     <script src="scripts/site.js" type="text/javascript"></script>
-    <script src="scripts/gallery.js" type="text/javascript"></script>
+    <script src="scripts/map.js" type="text/javascript"></script>
 </body>
 </html>
