Bug fixing for next release

--- a/map.htm
+++ b/map.htm
@@ -64,7 +64,7 @@
     </div>
     <br />
     <div class="container">
-        <div id="map"></div>
+        <div class="custom-popup" id="map"></div>
     </div>
     <div class="container">
         <footer>
